<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/albumsFragment">

    <fragment
        android:id="@+id/albumsFragment"
        android:name="com.example.ingsoftappmobiles.ui.albums.AlbumFragment"
        android:label="@string/title_albums"
        tools:layout="@layout/album_fragment" >
        <action
            android:id="@+id/action_navigation_albums_to_navigation_create_album"
            app:destination="@id/navigation_create_album" />
        <action
            android:id="@+id/action_albumsFragment_to_albumDetailFragment"
            app:destination="@id/albumDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create_album"
        android:name="com.example.ingsoftappmobiles.ui.albums.CreateAlbumFragment"
        android:label="@string/title_create_album"
        tools:layout="@layout/album_create" />

    <fragment
        android:id="@+id/albumDetailFragment"
        android:name="com.example.ingsoftappmobiles.ui.albums.AlbumDetailFragment"
        android:label="album_detail_fragment"
        tools:layout="@layout/album_detail_fragment" >
        <argument
            android:name="albumId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_artists"
        android:name="com.example.ingsoftappmobiles.ui.artists.ArtistsFragment"
        android:label="@string/title_artists"
        tools:layout="@layout/fragment_artists" />

    <fragment
        android:id="@+id/navigation_collectors"
        android:name="com.example.ingsoftappmobiles.ui.collectors.CollectorFragment"
        android:label="@string/title_collectors"
        tools:layout="@layout/fragment_collectors" />

</navigation>