<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="artist" type="com.example.ingsoftappmobiles.models.Artist"/>
    </data>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        android:layout_marginVertical="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_cover_detail"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@{artist.name}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@mipmap/ic_launcher" />


                <TextView
                    android:id="@+id/text_artist_name_detail_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{artist.name}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/text_release_date_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="0.5"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:text="@string/fecha_creacion_nacimiento" />
                    <TextView
                        android:id="@+id/text_release_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="0.5"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:text="@{artist.creationBrithDate}" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/text_artist_tipo_detail_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo_artista"
                        android:layout_weight="0.5"
                        android:textAppearance="?attr/textAppearanceListItem" />
                    <TextView
                        android:id="@+id/text_artist_tipo_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@{artist.tipo}"
                        android:textAppearance="?attr/textAppearanceListItem" />
                </LinearLayout>



            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_artist_albums_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/lanzamientos_title"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/artistDetailAlbumsRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/album_item"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"

            />

        <TextView
            android:id="@+id/text_artist_about_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/about_title"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_artist_about_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{artist.description}"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/text_artist_prizes_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/prizes_title"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/artistDetailPrizesRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/album_item"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"

            />


    </LinearLayout>
</layout>