<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="albumDetail" type="com.example.ingsoftappmobiles.models.AlbumDetail"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_cover"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@{albumDetail.name}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/text_album_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{albumDetail.name}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_release_date_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textStyle="bold"
                        android:text="@string/text_release_date_label"
                        android:textAppearance="@style/TextAppearance.AppCompat" />
                    <TextView
                        android:id="@+id/text_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{albumDetail.releaseDate}"
                        android:textAppearance="?attr/textAppearanceListItem" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/text_genre_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textStyle="bold"
                        android:text="@string/text_genre_label"
                        android:textAppearance="@style/TextAppearance.AppCompat" />
                    <TextView
                        android:id="@+id/text_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{albumDetail.genre}"
                        android:textAppearance="?attr/textAppearanceListItem" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/text_record_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textStyle="bold"
                        android:text="@string/text_record_label"
                        android:textAppearance="@style/TextAppearance.AppCompat" />
                    <TextView
                        android:id="@+id/text_record"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{albumDetail.recordLabel}"
                        android:textAppearance="?attr/textAppearanceListItem" />
                </LinearLayout>


            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_tracks_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center|center_vertical"
                        android:text="@string/text_tracks_title"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <!--<Button
                        android:id="@+id/create_track_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:text="@string/create_track_button_label"
                        app:icon="@drawable/ic_baseline_add_circle_24"
                        app:layout_constraintStart_toEndOf="@id/text_tracks_title" />-->

                </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/albumTrackRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/album_track_item"/>

        </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_comments_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/text_comments_title"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/albumCommentRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/album_comment_item"/>

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_description_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/text_album_description"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_album_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{albumDetail.description}"
                    android:textAppearance="?attr/textAppearanceListItem" />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>
</layout>